--- a/templates/base.html
+++ b/templates/base.html
@@ -6,20 +6,26 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal">Flask Train</h5>
-        <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="/">Main Page</a>
-            <a class="p-2 text-dark" href="/about">About Us</a>
-            <a class="p-2 text-dark" href="/all-companies">All Companies</a>
-
+    <div class="header">
+        <h5 class="">Flask Train</h5>
+        <nav class="menu">
+            <a class="p" href="/">Main Page</a>
+            <a class="" href="/about">About Us</a>
+            <a class="" href="/all-companies">All Companies</a>
         </nav>
+    </div>
+
+    {% block body %}{% endblock %}
+
+    <div class="aside">
 
     </div>
-    {% block body %}{% endblock %}
+
+    <div class="footer">
+
+    </div>
 </body>
 </html>
