--- a/templates/all-companies.html
+++ b/templates/all-companies.html
@@ -24,7 +24,7 @@ All companies
                         <td>{{ el.product_id }}</td>
                         <td>{{ el.description}}</td>
                         <td><b>Date: {{ el.registration_date.date() }}</b></td>
-                        <td><a href="update-company/{{ el.id }}" class="btn">Update</a></td>
+                        <td><a href="update-company/{{ el.id }}" class="btn">Edit</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
