--- a/templates/create-company.html
+++ b/templates/create-company.html
@@ -8,9 +8,12 @@ ABOUT PAGE
     <div class = ''>
     <h1>Create Company</h1>
     <form method="post">
+        <label for="name">Write name:</label>
         <input type="text" name="name" id="name" class="input-f" placeholder="Enter company name">
+        <label for="product_id">Write product id:</label>
         <input type="number" name="product_id" id="product_id" class="input-f" placeholder="Enter product id">
-        <input type="text" name="description" id="description" class="input-f" placeholder="Enter description">
+        <label for="description">Write description:</label>
+        <textarea name="description" id="description" class="input-f" placeholder="Enter description"></textarea>
         <input type="submit" value="Send">
     </form>
     </div>
